--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,55 +4,113 @@
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
+    --background: 210.0000 40.0000% 98.0392%;
+    --foreground: 217.5000 35.5556% 17.6471%;
     --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
+    --card-foreground: 0 0% 20%;
     --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-    --warning: 38 92% 50%;
-    --warning-foreground: 48 96% 89%;
-    --success: 142 72% 29%;
-    --success-foreground: 210 40% 98%;
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
-    --radius: 0.5rem;
+    --popover-foreground: 0 0% 20%;
+    --primary: 13.2143 73.0435% 54.9020%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 220.0000 14.2857% 95.8824%;
+    --secondary-foreground: 215 13.7931% 34.1176%;
+    --muted: 210 20.0000% 98.0392%;
+    --muted-foreground: 220 8.9362% 46.0784%;
+    --accent: 207.6923 46.4286% 89.0196%;
+    --accent-foreground: 224.4444 64.2857% 32.9412%;
+    --destructive: 0 84.2365% 60.1961%;
+    --destructive-foreground: 0 0% 100%;
+    --border: 210 9.3750% 87.4510%;
+    --input: 210 9.3750% 87.4510%;
+    --ring: 13.2143 73.0435% 54.9020%;
+    --chart-1: 210 37.5000% 65.4902%;
+    --chart-2: 12.9032 73.2283% 75.0980%;
+    --chart-3: 213.1579 29.9213% 50.1961%;
+    --chart-4: 216.9231 35.7798% 42.7451%;
+    --chart-5: 221.0127 43.6464% 35.4902%;
+    --sidebar: 210 7.6923% 94.9020%;
+    --sidebar-foreground: 0 0% 20%;
+    --sidebar-primary: 13.2143 73.0435% 54.9020%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 207.6923 46.4286% 89.0196%;
+    --sidebar-accent-foreground: 224.4444 64.2857% 32.9412%;
+    --sidebar-border: 220 13.0435% 90.9804%;
+    --sidebar-ring: 13.2143 73.0435% 54.9020%;
+    --font-sans: Inter, sans-serif;
+    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+    --font-mono: JetBrains Mono, monospace;
+    --radius: 0.25rem;
+    --shadow-2xs: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.06);
+    --shadow-xs: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.06);
+    --shadow-sm: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.11);
+    --shadow: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.11);
+    --shadow-md: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 2px 4px -1px hsl(0 0% 10.1961% / 0.11);
+    --shadow-lg: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 4px 6px -1px hsl(0 0% 10.1961% / 0.11);
+    --shadow-xl: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 8px 10px -1px hsl(0 0% 10.1961% / 0.11);
+    --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.28);
+    --tracking-normal: 0em;
+    --spacing: 0.25rem;
   }
+
   .dark {
-    --background: 222.2 84% 4.9%;
-    --foreground: 210 40% 98%;
-    --card: 222.2 84% 4.9%;
-    --card-foreground: 210 40% 98%;
-    --popover: 222.2 84% 4.9%;
-    --popover-foreground: 210 40% 98%;
-    --primary: 210 40% 98%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 217.2 32.6% 17.5%;
-    --secondary-foreground: 210 40% 98%;
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
-    --destructive: 0 82.8% 50.6%;
-    --destructive-foreground: 0 100% 100%;
-    --warning: 45 93% 47%;
-    --warning-foreground: 46 92% 95%;
-    --success: 143 64% 24%;
-    --success-foreground: 141 84% 93%;
-    --border: 217.2 32.6% 17.5%;
-    --input: 217.2 32.6% 17.5%;
-    --ring: 212.7 26.8% 83.9%;
+    --background: 219.1304 29.1139% 15.4902%;
+    --foreground: 0 0% 89.8039%;
+    --card: 223.6364 20.7547% 20.7843%;
+    --card-foreground: 0 0% 89.8039%;
+    --popover: 223.3333 19.1489% 18.4314%;
+    --popover-foreground: 0 0% 89.8039%;
+    --primary: 13.2143 73.0435% 54.9020%;
+    --primary-foreground: 0 0% 100%;
+    --secondary: 222 19.2308% 20.3922%;
+    --secondary-foreground: 0 0% 89.8039%;
+    --muted: 222 19.2308% 20.3922%;
+    --muted-foreground: 0 0% 63.9216%;
+    --accent: 223.6364 34.3750% 25.0980%;
+    --accent-foreground: 213.3333 96.9231% 87.2549%;
+    --destructive: 0 84.2365% 60.1961%;
+    --destructive-foreground: 0 0% 100%;
+    --border: 224.3478 15.8621% 28.4314%;
+    --input: 224.3478 15.8621% 28.4314%;
+    --ring: 13.2143 73.0435% 54.9020%;
+    --chart-1: 210 37.5000% 65.4902%;
+    --chart-2: 11.7241 63.5036% 73.1373%;
+    --chart-3: 213.1579 29.9213% 50.1961%;
+    --chart-4: 216.9231 35.7798% 42.7451%;
+    --chart-5: 221.0127 43.6464% 35.4902%;
+    --sidebar: 222.8571 20.0000% 20.5882%;
+    --sidebar-foreground: 0 0% 89.8039%;
+    --sidebar-primary: 13.2143 73.0435% 54.9020%;
+    --sidebar-primary-foreground: 0 0% 100%;
+    --sidebar-accent: 223.6364 34.3750% 25.0980%;
+    --sidebar-accent-foreground: 213.3333 96.9231% 87.2549%;
+    --sidebar-border: 224.3478 15.8621% 28.4314%;
+    --sidebar-ring: 13.2143 73.0435% 54.9020%;
+    --font-sans: Inter, sans-serif;
+    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+    --font-mono: JetBrains Mono, monospace;
+    --radius: 0.25rem;
+    --shadow-2xs: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.06);
+    --shadow-xs: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.06);
+    --shadow-sm: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.11);
+    --shadow: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.11);
+    --shadow-md: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 2px 4px -1px hsl(0 0% 10.1961% / 0.11);
+    --shadow-lg: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 4px 6px -1px hsl(0 0% 10.1961% / 0.11);
+    --shadow-xl: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 8px 10px -1px hsl(0 0% 10.1961% / 0.11);
+    --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.28);
+  }
+  .theme {
+    --font-sans: Inter, sans-serif;
+    --font-mono: JetBrains Mono, monospace;
+    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+    --radius: 0.25rem;
+    --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+    --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+    --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+    --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+    --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+  }
+  body {
+    letter-spacing: var(--tracking-normal);
   }
 }
 
