--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -4,99 +4,111 @@
 
 @layer base {
   :root {
-    --background: 210.0000 40.0000% 98.0392%;
-    --foreground: 217.5000 35.5556% 17.6471%;
+    --background: 0 0% 100%;
+    --foreground: 0 0% 20%;
     --card: 0 0% 100%;
     --card-foreground: 0 0% 20%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 20%;
-    --primary: 13.2143 73.0435% 54.9020%;
+    --primary: 217.2193 91.2195% 59.8039%;
     --primary-foreground: 0 0% 100%;
     --secondary: 220.0000 14.2857% 95.8824%;
     --secondary-foreground: 215 13.7931% 34.1176%;
     --muted: 210 20.0000% 98.0392%;
     --muted-foreground: 220 8.9362% 46.0784%;
-    --accent: 207.6923 46.4286% 89.0196%;
+    --accent: 204.0000 93.7500% 93.7255%;
     --accent-foreground: 224.4444 64.2857% 32.9412%;
     --destructive: 0 84.2365% 60.1961%;
     --destructive-foreground: 0 0% 100%;
-    --border: 210 9.3750% 87.4510%;
-    --input: 210 9.3750% 87.4510%;
-    --ring: 13.2143 73.0435% 54.9020%;
-    --chart-1: 210 37.5000% 65.4902%;
-    --chart-2: 12.9032 73.2283% 75.0980%;
-    --chart-3: 213.1579 29.9213% 50.1961%;
-    --chart-4: 216.9231 35.7798% 42.7451%;
-    --chart-5: 221.0127 43.6464% 35.4902%;
-    --sidebar: 210 7.6923% 94.9020%;
+    --border: 220 13.0435% 90.9804%;
+    --input: 220 13.0435% 90.9804%;
+    --ring: 217.2193 91.2195% 59.8039%;
+    --chart-1: 217.2193 91.2195% 59.8039%;
+    --chart-2: 221.2121 83.1933% 53.3333%;
+    --chart-3: 224.2781 76.3265% 48.0392%;
+    --chart-4: 225.9310 70.7317% 40.1961%;
+    --chart-5: 224.4444 64.2857% 32.9412%;
+    --sidebar: 210 20.0000% 98.0392%;
     --sidebar-foreground: 0 0% 20%;
-    --sidebar-primary: 13.2143 73.0435% 54.9020%;
+    --sidebar-primary: 217.2193 91.2195% 59.8039%;
     --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 207.6923 46.4286% 89.0196%;
+    --sidebar-accent: 204.0000 93.7500% 93.7255%;
     --sidebar-accent-foreground: 224.4444 64.2857% 32.9412%;
     --sidebar-border: 220 13.0435% 90.9804%;
-    --sidebar-ring: 13.2143 73.0435% 54.9020%;
+    --sidebar-ring: 217.2193 91.2195% 59.8039%;
     --font-sans: Inter, sans-serif;
-    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+    --font-serif: Source Serif 4, serif;
     --font-mono: JetBrains Mono, monospace;
-    --radius: 0.25rem;
-    --shadow-2xs: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.06);
-    --shadow-xs: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.06);
-    --shadow-sm: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.11);
-    --shadow: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.11);
-    --shadow-md: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 2px 4px -1px hsl(0 0% 10.1961% / 0.11);
-    --shadow-lg: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 4px 6px -1px hsl(0 0% 10.1961% / 0.11);
-    --shadow-xl: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 8px 10px -1px hsl(0 0% 10.1961% / 0.11);
-    --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.28);
+    --radius: 0.375rem;
+    --shadow-x: 0;
+    --shadow-y: 1px;
+    --shadow-blur: 3px;
+    --shadow-spread: 0px;
+    --shadow-opacity: 0.1;
+    --shadow-color: oklch(0 0 0);
+    --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+    --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+    --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+    --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+    --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
+    --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
+    --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
+    --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
     --tracking-normal: 0em;
     --spacing: 0.25rem;
   }
 
   .dark {
-    --background: 219.1304 29.1139% 15.4902%;
+    --background: 0 0% 9.0196%;
     --foreground: 0 0% 89.8039%;
-    --card: 223.6364 20.7547% 20.7843%;
+    --card: 0 0% 14.9020%;
     --card-foreground: 0 0% 89.8039%;
-    --popover: 223.3333 19.1489% 18.4314%;
+    --popover: 0 0% 14.9020%;
     --popover-foreground: 0 0% 89.8039%;
-    --primary: 13.2143 73.0435% 54.9020%;
+    --primary: 217.2193 91.2195% 59.8039%;
     --primary-foreground: 0 0% 100%;
-    --secondary: 222 19.2308% 20.3922%;
+    --secondary: 0 0% 14.9020%;
     --secondary-foreground: 0 0% 89.8039%;
-    --muted: 222 19.2308% 20.3922%;
+    --muted: 0 0% 12.1569%;
     --muted-foreground: 0 0% 63.9216%;
-    --accent: 223.6364 34.3750% 25.0980%;
+    --accent: 224.4444 64.2857% 32.9412%;
     --accent-foreground: 213.3333 96.9231% 87.2549%;
     --destructive: 0 84.2365% 60.1961%;
     --destructive-foreground: 0 0% 100%;
-    --border: 224.3478 15.8621% 28.4314%;
-    --input: 224.3478 15.8621% 28.4314%;
-    --ring: 13.2143 73.0435% 54.9020%;
-    --chart-1: 210 37.5000% 65.4902%;
-    --chart-2: 11.7241 63.5036% 73.1373%;
-    --chart-3: 213.1579 29.9213% 50.1961%;
-    --chart-4: 216.9231 35.7798% 42.7451%;
-    --chart-5: 221.0127 43.6464% 35.4902%;
-    --sidebar: 222.8571 20.0000% 20.5882%;
+    --border: 0 0% 25.0980%;
+    --input: 0 0% 25.0980%;
+    --ring: 217.2193 91.2195% 59.8039%;
+    --chart-1: 213.1169 93.9024% 67.8431%;
+    --chart-2: 217.2193 91.2195% 59.8039%;
+    --chart-3: 221.2121 83.1933% 53.3333%;
+    --chart-4: 224.2781 76.3265% 48.0392%;
+    --chart-5: 225.9310 70.7317% 40.1961%;
+    --sidebar: 0 0% 9.0196%;
     --sidebar-foreground: 0 0% 89.8039%;
-    --sidebar-primary: 13.2143 73.0435% 54.9020%;
+    --sidebar-primary: 217.2193 91.2195% 59.8039%;
     --sidebar-primary-foreground: 0 0% 100%;
-    --sidebar-accent: 223.6364 34.3750% 25.0980%;
+    --sidebar-accent: 224.4444 64.2857% 32.9412%;
     --sidebar-accent-foreground: 213.3333 96.9231% 87.2549%;
-    --sidebar-border: 224.3478 15.8621% 28.4314%;
-    --sidebar-ring: 13.2143 73.0435% 54.9020%;
+    --sidebar-border: 0 0% 25.0980%;
+    --sidebar-ring: 217.2193 91.2195% 59.8039%;
     --font-sans: Inter, sans-serif;
-    --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
+    --font-serif: Source Serif 4, serif;
     --font-mono: JetBrains Mono, monospace;
-    --radius: 0.25rem;
-    --shadow-2xs: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.06);
-    --shadow-xs: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.06);
-    --shadow-sm: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.11);
-    --shadow: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 1px 2px -1px hsl(0 0% 10.1961% / 0.11);
-    --shadow-md: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 2px 4px -1px hsl(0 0% 10.1961% / 0.11);
-    --shadow-lg: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 4px 6px -1px hsl(0 0% 10.1961% / 0.11);
-    --shadow-xl: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.11), 0px 8px 10px -1px hsl(0 0% 10.1961% / 0.11);
-    --shadow-2xl: 0px 1px 3px 0px hsl(0 0% 10.1961% / 0.28);
+    --radius: 0.375rem;
+    --shadow-x: 0;
+    --shadow-y: 1px;
+    --shadow-blur: 3px;
+    --shadow-spread: 0px;
+    --shadow-opacity: 0.1;
+    --shadow-color: oklch(0 0 0);
+    --shadow-2xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+    --shadow-xs: 0 1px 3px 0px hsl(0 0% 0% / 0.05);
+    --shadow-sm: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+    --shadow: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 1px 2px -1px hsl(0 0% 0% / 0.10);
+    --shadow-md: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 2px 4px -1px hsl(0 0% 0% / 0.10);
+    --shadow-lg: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 4px 6px -1px hsl(0 0% 0% / 0.10);
+    --shadow-xl: 0 1px 3px 0px hsl(0 0% 0% / 0.10), 0 8px 10px -1px hsl(0 0% 0% / 0.10);
+    --shadow-2xl: 0 1px 3px 0px hsl(0 0% 0% / 0.25);
   }
   .theme {
     --font-sans: Inter, sans-serif;
